WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86002
[Qt] Fix sites with a viewport meta tag when devicePixelRatio isn't explicitely set on the WebView
https://bugs.webkit.org/show_bug.cgi?id=86002
Summary
[Qt] Fix sites with a viewport meta tag when devicePixelRatio isn't explicite...
Jocelyn Turcotte
Reported
2012-05-09 09:53:49 PDT
[Qt] Fix sites with a viewport meta tag when devicePixelRatio isn't explicitely set on the WebView
Attachments
Patch
(2.18 KB, patch)
2012-05-09 10:00 PDT
,
Jocelyn Turcotte
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jocelyn Turcotte
Comment 1
2012-05-09 10:00:33 PDT
Created
attachment 140964
[details]
Patch
Kenneth Rohde Christiansen
Comment 2
2012-05-09 11:25:59 PDT
Good catch!
WebKit Review Bot
Comment 3
2012-05-10 05:38:11 PDT
Comment on
attachment 140964
[details]
Patch Clearing flags on attachment: 140964 Committed
r116634
: <
http://trac.webkit.org/changeset/116634
>
WebKit Review Bot
Comment 4
2012-05-10 05:38:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug